--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
                 Thank you for giving your time to help us improve the platform
             </strong></p>
         </header>
-        <form id="survey-form" class="container">
+        <form id="survey-form" class="container-fluid">
             <div class="form-group">
                 <label id="name-label" for="name">Name</label>
                 <input type="text" name="name" id="name" class="form-control " placeholder="Enter your name"
